# immersitech-examples

./: .gitignore  README.md
examples/: imm_websocket_config.json  readme.md
examples/ClearVoice SDK/: CMakeLists.txt  main.cpp  readme.md
examples/ClearVoice SDK/demo/: main.cpp  readme
examples/SpatialVoice SDK/3d_mixing_demo/: main.cpp  readme
examples/SpatialVoice SDK/clearvoice_demo/clearvoice_demo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/SpatialVoice SDK/clearvoice_demo/clearvoice_demo.xcodeproj/project.xcworkspace/xcuserdata/lukenash.xcuserdatad/: UserInterfaceState.xcuserstate
examples/SpatialVoice SDK/clearvoice_demo/clearvoice_demo.xcodeproj/xcshareddata/xcschemes/: speech_clarity_demo.xcscheme
examples/SpatialVoice SDK/legacy_examples/: room_layout.json
examples/SpatialVoice SDK/legacy_examples/spatial_audio_example/: README.md  immersitech_example.c
examples/SpatialVoice SDK/noise_removal_demo/clearvoice_demo/: clearvoice_demo.vcxproj.filters
examples/SpatialVoice SDK/noise_removal_demo/clearvoice_demo.xcodeproj/xcuserdata/lukenash.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/clearvoice_demo/: clearvoice_demo.sln  test.cpp
examples/clearvoice_demo/clearvoice_demo/: audiofile.h  clearvoice_demo.vcxproj  test.cpp
examples/clearvoice_demo/clearvoice_demo.xcodeproj/: project.pbxproj
examples/legacy_examples/noise_cancellation_example/: immersitech_noise_cancellation_example.vcxproj  noise_cancellation_example.c
examples/legacy_examples/spatial_audio_example/: Makefile
examples/noise_cancellation_example/: Makefile  README.md  immersitech_noise_cancellation_example.vcxproj
examples/spatial_audio_example/: immersitech_3d_example.vcxproj
examples/speech_clarity_demo/speech_clarity_demo.xcodeproj/: project.pbxproj
examples/speech_clarity_demo/speech_clarity_demo.xcodeproj/project.xcworkspace/xcuserdata/lukenash.xcuserdatad/: UserInterfaceState.xcuserstate
examples/speech_clarity_demo/speech_clarity_demo.xcodeproj/xcshareddata/xcschemes/: speech_clarity_demo.xcscheme
include/: immersitech.h  immersitech_event_manager.h  immersitech_logger.h
